@@ -1,5 +1,9 @@
 2007-07-04  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
+	* SoObjects/Mailer/SOGoMailObject.m ([SOGoMailObject
+	-contentAsString]): returns the message encoded in ISO Latin 1
+	again.
+
 	* SoObjects/SOGo/SOGoUser.m ([SOGoUser +initialize]): read the
 	SOGoSuperUsername user defaults.
 	([SOGoUser -initWithLogin:newLoginroles:newRoles]): simplified
